# azrach-tech

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api_models/: patient_api_models.py
app/core/: database.py  exceptions.py  logger.py
app/models/: patient.py
app/routing/: patients.py
app/services/: patient_service.py
app/utils/: patient_utils.py
app/validators/: patient_validators.py
migrations/: env.py
migrations/versions/: 8bb80d1df558_create_patients_table.py
